--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "type-challenges",
   "version": "1.0.0",
+  "scripts": {
+    "start": "tsc --watch",
+    "build": "tsc"
+  },
   "dependencies": {
-    "@type-challenges/utils": "^0.1.1"
+    "@type-challenges/utils": "^0.1.1",
+    "typescript": "^4.5.4"
   }
 }
